<resources>
    <string name="app_name">Exam</string>
    <string name="todo">Todo</string>
    <string name="Login">جهت ورود به فروشگاه اینترنتی آنلاین شاپ ایمیل خود را در کادر زیر وارد کرده و کد ارسالی به ایمیل خود را در مرحله بعد وارد کنید.</string>
    <string name="Email">ایمیل:</string>
    <string name="enterEmail">ایمیل خود را وارد کنید</string>
    <string name="enter">تایید و ادامه</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="codeSend">ارسال مجدد کد</string>
    <string name="edit">ویرایش ایمیل</string>
    <string name="codeEnter">کد تایید را وارد کنید</string>
    <string name="rightCode">کد تایید:</string>
    <string name="wat">لطفا صبر کنید</string>
    <string name="user">اطلاعات کاربری:</string>
    <string name="name_family">نام و نام خانوادگی خود را وارد کنید</string>
    <string name="Crossing">عبور از این مرحله</string>
    <string name="myProfile">پروفایل کاربری</string>
    <string name="myOrders">سفارشات من</string>
    <string name="back">پشتیبانی</string>
    <string name="Rules">قوانین و مقررات</string>
    <string name="about">درباره ما</string>
    <string name="contact">تماس با ما</string>
    <string name="open">باز کردن</string>
    <string name="close">بستن</string>
    <string name="enjoy">از ورزشت لذت ببر!</string>
    <string name="shoes">تولید و عرضه انواع کفش های اسپرت در همه سایز ها</string>
    <string name="cateGory">دسته بندی </string>
    <string name="buy">تنها با یک کلیک خرید کن!</string>
    <string name="search">هرجی میخوای جستوجو کن...</string>
    <string name="home">خانه</string>
    <string name="cate">دسته بندی ها</string>
    <string name="basket">ُسبد خرید</string>
    <string name="profile">پروفایل من</string>
    <string name="sell">پر فروش ترین ها</string>
    <string name="allShow">مشاهده همه</string>
    <string name="women">زنانه</string>
    <string name="men">پوشاک مردانه</string>
    <string name="clothes">ّبلوز و پیراهن</string>
    <string name="t_shirt">تیشرت و پولیور</string>
    <string name="lastWeek">پرفروش ترین های هفته گذشته</string>
    <string name="easy">راحتی</string>
    <string name="pants">شلوار و شلوارک</string>
    <string name="socks">جوراب</string>
    <string name="bag">کیف</string>
    <string name="menClothes">بلوز و پیراهن مردانه</string>
    <string name="userProfile">پروفایل کاربری</string>
    <string name="experience">تجربه های خرید من</string>
    <string name="changePassword">تغییر رمز عبور</string>
    <string name="myNotif">اعلانات من</string>
    <string name="myFavorite">علاقه مندی های من</string>
    <string name="myAddress">ادرس های من</string>
    <string name="explanation">توضیحات</string>
    <string name="property">ویژگی ها</string>
    <string name="comments">نظرات</string>
    <string name="familiar">محصولات مشابه</string>
    <string name="changePassword1">تغییر رمز</string>
    <string name="currentPassword">رمز عبور فعلی:</string>
    <string name="test">*</string>
    <string name="newPassword">رمز عبور جدید</string>
    <string name="_12356">کد سفارش : 12356</string>
    <string name="successFull">پرداخت موفق</string>
    <string name="aboutusfragment">AboutUsFragment</string>
    <string name="contactfragment">ContactFragment</string>
    <string name="rulesfragment">RulesFragment</string>
    <string name="backupfragment">BackUpFragment</string>
    <string name="_0">0</string>
</resources>