<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/profile_menu"
        android:icon="@drawable/img_1"
        android:title="@string/myProfile"/>

    <item android:id="@+id/order_menu"
        android:icon="@drawable/img"
        android:title="@string/myOrders"/>

    <item android:id="@+id/backUp_menu"
        android:icon="@drawable/img_2"
        android:title="@string/back"/>

    <item android:id="@+id/rules_menu"
        android:icon="@drawable/img_3"
        android:title="@string/Rules"/>

    <item android:id="@+id/aboutUs_menu"
        android:icon="@drawable/img_4"
        android:title="@string/about"/>

    <item android:id="@+id/contact_menu"
        android:icon="@drawable/img_5"
        android:title="@string/contact"/>
</menu>