<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view_experience"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@drawable/back_custom_nav"
        app:layout_constraintBottom_toTopOf="@+id/view_experience"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view_experience" />

    <View
        android:id="@+id/viewHome"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_experience"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/viewCategory"
        app:layout_constraintTop_toTopOf="@+id/view_experience" />

    <View
        android:id="@+id/viewCategory"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewHome"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/viewBasket"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <View
        android:id="@+id/viewBasket"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_experience"
        app:layout_constraintEnd_toStartOf="@+id/viewCategory"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/viewProfile"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <View
        android:id="@+id/viewProfile"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewBasket"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view_experience"
        app:layout_constraintStart_toStartOf="@+id/view_experience"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/viewHome"
        app:layout_constraintTop_toTopOf="@+id/viewHome"
        app:srcCompat="@drawable/img_24" />

    <TextView
        android:id="@+id/txt_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textColor="@color/orange"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/viewHome"
        app:layout_constraintEnd_toEndOf="@+id/imageView11"
        app:layout_constraintStart_toStartOf="@+id/imageView11" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toStartOf="@+id/viewHome"
        app:layout_constraintStart_toStartOf="@+id/viewCategory"
        app:layout_constraintTop_toTopOf="@+id/imageView11"
        app:srcCompat="@drawable/img_25" />

    <TextView
        android:id="@+id/txt_cateGory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cate"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/viewHome"
        app:layout_constraintEnd_toEndOf="@+id/imageView12"
        app:layout_constraintStart_toStartOf="@+id/imageView12" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toStartOf="@+id/viewCategory"
        app:layout_constraintStart_toStartOf="@+id/viewBasket"
        app:layout_constraintTop_toTopOf="@+id/viewCategory"
        app:srcCompat="@drawable/img_26" />

    <TextView
        android:id="@+id/txt_basket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basket"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/viewCategory"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintStart_toStartOf="@+id/imageView13" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toStartOf="@+id/viewBasket"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewBasket"
        app:srcCompat="@drawable/img_27" />

    <TextView
        android:id="@+id/txt_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:text="@string/profile"
        app:layout_constraintBottom_toBottomOf="@+id/viewBasket"
        app:layout_constraintEnd_toEndOf="@+id/imageView14"
        app:layout_constraintStart_toStartOf="@+id/imageView14" />

</androidx.constraintlayout.widget.ConstraintLayout>