<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_app">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_2"
        tools:context=".activites.RegisterActivity">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/img_1"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/img_3"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_email"
            android:layout_width="380dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="16dp"
            android:layoutDirection="rtl"
            app:endIconCheckable="false"
            app:errorTextColor="@color/red"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/button_confirm"
            app:layout_constraintStart_toStartOf="@+id/button_confirm"
            app:layout_constraintTop_toBottomOf="@+id/imageView5">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/get_email_edt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/back_edt_text"
                android:hint="@string/codeEnter"
                android:inputType="number"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/lightGray" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/time_txt"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/edt_email"
            app:layout_constraintStart_toStartOf="@+id/edt_email"
            app:layout_constraintTop_toTopOf="@+id/edt_email"
            tools:text="TextView" />

        <View
            android:id="@+id/view_back"
            android:layout_width="130dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_confirm" />

        <TextView
            android:id="@+id/txt_resendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/codeSend"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/view_back"
            app:layout_constraintEnd_toEndOf="@+id/view_back"
            app:layout_constraintTop_toTopOf="@+id/view_back" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="18dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="3dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toStartOf="@+id/txt_resendCode"
            app:layout_constraintStart_toStartOf="@+id/view_back"
            app:layout_constraintTop_toTopOf="@+id/view_back"
            app:srcCompat="@drawable/baseline_left" />


        <Button
            android:id="@+id/button_confirm"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/enter"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email" />

        <TextView
            android:id="@+id/txt_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/view_back"
            app:layout_constraintEnd_toEndOf="@+id/button_confirm"
            app:layout_constraintTop_toTopOf="@+id/view_back" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="68dp"
            android:text="@string/rightCode"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/edt_email"
            app:layout_constraintEnd_toEndOf="@+id/edt_email" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"
            android:textDirection="rtl"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/edt_email"
            app:layout_constraintEnd_toEndOf="@+id/edt_email"
            app:layout_constraintStart_toStartOf="@+id/edt_email"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:text="TextView" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>